# django-q

./: .env.tmpl  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Dockerfile.test  LICENSE  MANIFEST.in  README.md  README.rst  django_compilemessages.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.in  requirements.txt  runtests.py  setup.py  test-services-docker-compose.yaml  test_iron_mq_config.json  web-docker-compose.yaml
.circleci/: config.yml
.github/: FUNDING.yml  release-drafter.yml
.github/workflows/: codeql-analysis.yml  release.yml  release_log.yml  test.yml
django_q/: __init__.py  admin.py  apps.py  cluster.py  compat.py  conf.py  core.py  core_signing.py  humanhash.py  main.py  models.py  monitor.py  monitor_terminal.py  pusher.py  q.py  queues.py  registry.py  scheduler.py  signals.py  signing.py  status.py  tasks.py  utils.py  worker.py
django_q/brokers/: __init__.py  aws_sqs.py  disque.py  django_redis.py  djangoredis.py  iron_mq.py  ironmq.py  mongo.py  orm.py  redis.py  redis_broker.py
django_q/locale/de/LC_MESSAGES/: django.mo  django.po
django_q/locale/en/LC_MESSAGES/: django.mo  django.po
django_q/locale/fr/: django.mo  django.po
django_q/locale/fr/LC_MESSAGES/: django.mo  django.po
django_q/locale/tr/LC_MESSAGES/: django.po
django_q/locale/zh/LC_MESSAGES/: django.mo  django.po
django_q/management/commands/: qcluster.py  qinfo.py  qmemory.py  qmonitor.py  qschedules.py  qworker.py  testq.py
django_q/migrations/: 0001_initial.py  0001_squashed_0003_auto_20150707_1854.py  0002_auto_20150630_1624.py  0002_auto_20150708_1006.py  0003_auto_20150707_1854.py  0003_auto_20150708_1326.py  0004_auto_20150710_1043.py  0005_auto_20150718_1506.py  0006_auto_20150805_1817.py  0007_ormq.py  0008_add_broker_schedule.py  0008_auto_20160224_1026.py  0009_auto_20160709_1325.py  0009_auto_20171009_0915.py  0010_auto_20200610_0856.py  0010_schedule_from_registry.py  0011_auto_20200628_1055.py  0012_auto_20200702_1608.py  0013_task_attempt_count.py  0014_schedule_cluster.py  0015_alter_schedule_schedule_type.py  0015_index_schedule.py  0016_schedule_intended_date_kwarg.py  0017_task_cluster_alter.py
django_q/tests/: __init__.py  conftest.py  settings.py  tasks.py  test_admin.py  test_brokers.py  test_cached.py  test_cluster.py  test_commands.py  test_config.py  test_monitor.py  test_q.py  test_qcluster.py  test_qworker.py  test_scheduler.py  urls.py
django_q/tests/testing_utilities/: multiple_database_routers.py
docs/: Dockerfile  Makefile  admin.rst  architecture.rst  brokers.rst  chain.rst  cluster.rst  conf.py  configure.rst  docker-compose.yaml  errors.rst  examples.rst  group.rst  index.rst  install.rst  iterable.rst  management.rst  monitor.rst  requirements.txt  schedules.rst  signals.rst  tasks.rst  usage.rst
dq/: tasks.py
example_project/: views.py
example_project/example_project/: settings.py  urls.py  wsgi.py
scripts/supervisor/: qcluster_example.conf
