[tool.poetry]
name = "django-q2"
version = "1.4.0"
packages = [
    { include = "django_q" },
]
description = "A multiprocessing distributed task queue for Django"
authors = ["Stan Triepels <django-q2@stantriepels.com>", "Ilan Steemers <koed00@gmail.com>"]
maintainers = ["Stan Triepels <django-q2@stantriepels.com>"]
license = "MIT"
readme = 'README.rst'

repository = "https://github.com/GDay/django-q2"
homepage = "https://django-q2.readthedocs.org"
documentation = "https://django-q2.readthedocs.org"

keywords = ["django", "distributed", "multiprocessing", "queue", "scheduler"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: MacOS',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: System :: Distributed Computing',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
include = ['CHANGELOG.md']

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."djangoq.errorreporters"]
"rollbar" = "django_q_rollbar:Rollbar"
"sentry" = "django_q_sentry:Sentry"


[tool.poetry.dependencies]
python = ">=3.7.13, <4"
django = ">=2.2"
blessed = "^1.17.6"
arrow = "^1.1.0"
django-picklefield = "^3.0.1"

hiredis = { version = "^1.0.1", optional = true }
redis = { version = "^3.5.3", optional = true }
psutil = { version = "^5.7.0", optional = true }
django-redis = { version = "^4.12.1", optional = true }
iron-mq = { version = "^0.9", optional = true }
boto3 = { version = "^1.14.12", optional = true }
pymongo = { version = "^3.10.1", optional = true }
croniter = { version = "^0.3.34", optional = true }
django-q-rollbar = {version = ">=0.1", optional = true}
django-q-sentry = {version = ">=0.1", optional = true}


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-django = "^4.5.2"
Sphinx = "^4.0.2"
pytest-cov = "^3.0.0"
black = "^22.8.0"
isort = {extras = ["requirements_deprecated_finder"], version = "^5.10.1"}

[tool.poetry.extras]
requires = ["poetry_core>=1.0.0"]
build-backend = ["poetry.core.masonry.api"]
testing = ["django-redis", "croniter", "hiredis", "psutil", "iron-mq", "boto3", "pymongo"]
rollbar = ["django-q-rollbar"]
sentry = ["django-q-sentry"]

[tool.isort]
profile = "black"
multi_line_output = 3
